# FinalProject

CLionProjects/MyOpenGLTry1/: CMakeLists.txt
CLionProjects/MyOpenGLTry1/includes/glew/2.1.0/: INSTALL_RECEIPT.json
CLionProjects/MyOpenGLTry1/includes/learnopengl/: model.h
CLionProjects/MyOpenGLTry1/src/formal_try/CHO/: cho.cpp
CLionProjects/MyOpenGLTry1/src/try1/sphere/: better_sphere.cpp  sphere1.cpp  try1.1.cpp
CLionProjects/MyOpenGLTry1/src/try2/my_try/: my_try1.cpp
CLionProjects/MyOpenGLTry1/src/try2/try2.1/: try.cpp  try2.2.cpp
CLionProjects/MyOpenGLTry1/src/try2/try4.1/: try2.2.cpp
CLionProjects/OpenGLFormalTry/: APPLE.md  CMakeLists.txt
CLionProjects/OpenGLFormalTry/cmake/modules/: FIndGLTools.cmake  FindFREEGLUT.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake
CLionProjects/OpenGLFormalTry/includes/freeglut/3.0.0/: INSTALL_RECEIPT.json
CLionProjects/OpenGLFormalTry/src/formal_try/CHO/: cho.cpp
CLionProjects/Try3/: glad.c  try1.cpp
CLionProjects/Try3/Include/glad/: glad.h
CLionProjects/Try4/: CMakeLists.txt
CLionProjects/Try4.1/: CMakeLists.txt
CLionProjects/Try4.1/2/: 2.cpp
CLionProjects/learnopengl/: CMakeLists.txt  README.md
CLionProjects/learnopengl/BasicLighting/: BasicLighting.cpp  SpecularHighlight.cpp  basic_lighting.frag  basic_lighting.vs  specular_highlight.frag
CLionProjects/learnopengl/Camera/: Camera  Camera.cpp  Camera.h  CameraCircle.cpp  CameraFree.cpp  EulerAngle.cpp  UseCameraClass.cpp
CLionProjects/learnopengl/Colors/: Colors  Colors.cpp
CLionProjects/learnopengl/CoordinateSystems/: CoordinateSystems.cpp
CLionProjects/learnopengl/HelloSquare/: HelloSquare  HelloSquare.cpp
CLionProjects/learnopengl/HelloTriangle/: HelloTriangle.cpp  HelloWindow  TwoDifferentTriangles.cpp  TwoTriangles.cpp
CLionProjects/learnopengl/HelloWindow/: HelloWindow.cpp
CLionProjects/learnopengl/LightCasters/: DirectionalLight.cpp  LightCasters  LightCasters.cpp  PointLight.cpp  SmoothSpotlight.cpp  SpotLight.cpp  directional_light.frag  point_light.frag  smooth_spot_light.frag  spot_light.frag
CLionProjects/learnopengl/LightingMaps/: LightingMaps  LightingMaps.cpp  lighting_maps.frag  lighting_maps.vs
CLionProjects/learnopengl/Materials/: Materials.cpp  material.frag  materials.vs
CLionProjects/learnopengl/Mesh/: Mesh.cpp  Mesh.h
CLionProjects/learnopengl/Model/: Model.cpp  Model.h  UseModelClass.cpp
CLionProjects/learnopengl/MultipleLights/: MultipleLights.cpp  multiple_lights.frag
CLionProjects/learnopengl/Shaders/: ColorfulShaders.cpp  README.md  Shader.h  Shaders  Shaders.cpp  UseShaderClass.cpp  useshaderclass.frag
CLionProjects/learnopengl/Sphere/: DisplaySphere.cpp  Sphere.cpp  Sphere.h
CLionProjects/learnopengl/Textures/: Textures.cpp  TwoTextures.cpp  textures.frag  two_textures.frag  two_textures.vs
CLionProjects/learnopengl/Transformations/: Transformations  Transformations.cpp
CLionProjects/learnopengl/test1/: ReadFile.cpp  ReadFile.h  test1  test1.cpp  test1.txt
FinalProject/戴羽涵-171250016/CalabashBrothers/: GUIDE.md  README.md  Task.md  pom.xml
FinalProject/戴羽涵-171250016/CalabashBrothers/src/main/java/model/: Main.java
FinalProject/戴羽涵-171250016/CalabashBrothers/src/main/java/model/canvas/: BulletCanvas.java  GameMap.java  HPCanvas.java  MapCanvas.java  PlayerCanvas.java
FinalProject/戴羽涵-171250016/CalabashBrothers/src/main/java/model/creatures/: Demon.java  DemonEnum.java  GoodPeople.java  GoodPeopleEnum.java  NoPerson.java
FinalProject/戴羽涵-171250016/CalabashBrothers/src/main/java/model/helper/: BattleModel.java  Direction.java  GameOver.java  GameSetter.java  GameStarter.java  Judger.java  Position.java
FinalProject/戴羽涵-171250016/CalabashBrothers/src/main/java/model/holder/: BulletHolder.java  DemonHolder.java  GoodPeopleHolder.java  (+2 more)
OpenGLProjects/OpenGLTry1/OpenGLTry1/: Info.plist  main.cpp  main.m
OpenGLProjects/OpenGLTry1/OpenGLTry1.xcodeproj/: project.pbxproj
OpenGLProjects/OpenGLTry1/OpenGLTry1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenGLProjects/OpenGLTry1/OpenGLTry1.xcodeproj/project.xcworkspace/xcuserdata/neowoodley.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGLProjects/OpenGLTry1/OpenGLTry1.xcodeproj/xcuserdata/neowoodley.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenGLProjects/OpenGLTry1/OpenGLTry1/Base.lproj/: Main.storyboard
OpenGLProjects/OpenGLTry1/OpenGLTry1Tests/: OpenGLTry1Tests.m
OpenGLProjects/OpenGLTry1/OpenGLTry1UITests/: OpenGLTry1UITests.m
OpenGLProjects/OpenGLTry2/OpenGLTry2/: AppDelegate.swift  ViewController.swift
OpenGLProjects/OpenGLTry2/OpenGLTry2.xcodeproj/: project.pbxproj
OpenGLProjects/OpenGLTry2/OpenGLTry2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenGLProjects/OpenGLTry2/OpenGLTry2.xcodeproj/project.xcworkspace/xcuserdata/neowoodley.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGLProjects/OpenGLTry2/OpenGLTry2.xcodeproj/xcuserdata/neowoodley.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenGLProjects/OpenGLTry2/OpenGLTry2/Base.lproj/: Main.storyboard
OpenGLProjects/OpenGLTry2/OpenGLTry2Tests/: OpenGLTry2Tests.swift
OpenGLProjects/OpenGLTry2/OpenGLTry2UITests/: OpenGLTry2UITests.swift
OpenGLProjects/OpenGLTry3/OpenGLTry3/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
OpenGLProjects/OpenGLTry3/OpenGLTry3.xcodeproj/: project.pbxproj
OpenGLProjects/OpenGLTry3/OpenGLTry3.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenGLProjects/OpenGLTry3/OpenGLTry3.xcodeproj/project.xcworkspace/xcuserdata/neowoodley.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGLProjects/OpenGLTry3/OpenGLTry3.xcodeproj/xcuserdata/neowoodley.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenGLProjects/OpenGLTry3/OpenGLTry3/Base.lproj/: Main.storyboard
OpenGLProjects/OpenGLTry3/OpenGLTry3Tests/: OpenGLTry3Tests.m
OpenGLProjects/OpenGLTry3/OpenGLTry3UITests/: OpenGLTry3UITests.m
OpenGLProjects/OpenGLTry4/OpenGLTry4/: main.cpp
OpenGLProjects/OpenGLTry4/OpenGLTry4.xcodeproj/: project.pbxproj
VisualStudioProjects/Try1/Try1/: EmptyClass.cs
(+5 files in other folders)
